# sklab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Justfile  README.md  pyproject.toml  zensical.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: glossary.md  index.md  references.md
docs/api/: index.md
docs/api/eksperiment/: experiment.md
docs/api/eksperiment/logging/: adapters.md
docs/api/sklab/: experiment.md  explain.md  optuna.md  search.md
docs/api/sklab/logging/: adapters.md  interfaces.md
docs/developer/: logging-plugins.md  search-plugins.md  writing-docs.md
docs/tutorials/: basics-classification-iris.md  basics-regression-census.md  cyclical-feature-engineering.md  experiment.md  explain-shap-advanced.md  explain-shap.md  logger-adapters.md  optuna-advanced.md  optuna-search.md  sklearn-search.md  time-series-forecasting.md  titanic-classification.md  why-pipelines.md
plans/: docs-critique-and-improvement.md  experiment-v1.md  explain-api-design.md  feature-vision.md  lazy-module.md  logger-protocol-v2.md  logger-protocol.md  package-rename-scikit-lab.md  run-context-api-design.md  run-result-design-v2.md  run-result.md  scorer-types.md  search-choices.md  test-coverage-improvements.md
src/eksperiment/: experiment.py  optuna.py
src/eksperiment/logging/: adapters.py
src/sklab/: __init__.py  _explain.py  _lazy.py  _results.py  experiment.py  logging.py  optuna.py  search.py  type_aliases.py
src/sklab/_logging/: mlflow.py  noop.py  wandb.py
src/sklab/_search/: __init__.py  optuna.py  sklearn.py
src/sklab/adapters/: __init__.py  interfaces.py  logging.py  search.py
src/sklab/logging/: adapters.py  interfaces.py
tests/: conftest.py  test_experiment.py  test_lazy.py  test_logging_adapters.py  test_scorer_names.py
tests/explain/: test_integration.py  test_result.py  test_selection.py
video/src/: Root.tsx  SklabVideo.tsx
video/src/components/: CodeBlock.tsx  ComparisonBadge.tsx  GlowText.tsx  Highlight.tsx  Strikethrough.tsx  TypewriterText.tsx
video/src/styles/: colors.ts  fonts.ts
