[project]
name = "eksperiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
optuna = [
    "optuna>=4.6.0",
]
wandb = [
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "prek>=0.2.27",
    "ruff>=0.14.11",
    "scikit-learn>=1.7.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "UP", "TID"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
