[project]
name = "eksperiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
optuna = [
    "optuna>=4.6.0",
]
wandb = [
    "wandb>=0.23.1",
]
mlflow = [
    "mlflow>=3.8.1",
]

[dependency-groups]
dev = [
    "prek>=0.2.27",
    "ruff>=0.14.11",
]
test = [
    "pandas>=2.3.3",
    "polars>=1.37.0",
    "pytest-markdown-docs>=0.9.0",
    "pytest>=9.0.2",
]
docs = [
    "mkdocstrings-python",
    "zensical",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--markdown-docs"]
testpaths = ["tests", "docs"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "UP", "TID"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
